; ModuleID = '/home/carl/AnghaBench/disque/src/extr_job.c_AOFDelJob.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_job.c_AOFDelJob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }
%struct.TYPE_6__ = type { i32* }
%struct.TYPE_5__ = type { i32 }

@server = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@AOF_OFF = common dso_local global i64 0, align 8
@JOB_ID_LEN = common dso_local global i32 0, align 4
@shared = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AOFDelJob(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca [2 x i32*], align 16
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @server, i32 0, i32 0), align 8
  %6 = load i64, i64* @AOF_OFF, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %23

9:                                                ; preds = %1
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @JOB_ID_LEN, align 4
  %14 = call i32* @createStringObject(i32 %12, i32 %13)
  store i32* %14, i32** %3, align 8
  %15 = getelementptr inbounds [2 x i32*], [2 x i32*]* %4, i64 0, i64 0
  %16 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @shared, i32 0, i32 0), align 8
  store i32* %16, i32** %15, align 8
  %17 = getelementptr inbounds i32*, i32** %15, i64 1
  %18 = load i32*, i32** %3, align 8
  store i32* %18, i32** %17, align 8
  %19 = getelementptr inbounds [2 x i32*], [2 x i32*]* %4, i64 0, i64 0
  %20 = call i32 @feedAppendOnlyFile(i32** %19, i32 2)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @decrRefCount(i32* %21)
  br label %23

23:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32* @createStringObject(i32, i32) #1

declare dso_local i32 @feedAppendOnlyFile(i32**, i32) #1

declare dso_local i32 @decrRefCount(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
